Kind of resolve content shifting without scrollbar
Resolved at the expense of the content not actually being centered when there isn't a scrollbar. A media query is added to stop this on small viewports where the difference would be noticeable

--- a/app/assets/stylesheets/partials/_general.scss
+++ b/app/assets/stylesheets/partials/_general.scss
@@ -2,6 +2,12 @@ body {
   background-color: $background;
 }
 
+@media (min-width: 1040px) {
+  body {
+    width: calc(100vw - 34px); // stops the page shifting when there isn't a scrollbar
+  }
+}
+
 .turbolinks-progress-bar {
   background: $red;
 }
